k8s/media/ersatztv/resources/resources.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      # nodeSelector:
      #   nvidia.com/gpu.present: 'true'
      #   nvidia.com/gpu.product: NVIDIA-GeForce-GTX-1060-6GB-SHARED
      # runtimeClassName: nvidia
      securityContext:
        fsGroup: 1000
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: nfs-media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: transcode
          emptyDir: {}
        - name: dri
          hostPath:
            path: /dev/dri
      containers:
        - name: ersatztv
          image: docker.io/jasongdove/ersatztv:v25.2.0-nvidia@sha256:cc6d6c8e51c457a08ed48e08e43f3406c48837473a9d580fea6d3831439b4f98
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
              # nvidia.com/gpu: 1
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: volume
              mountPath: /config
            - name: nfs-media
              mountPath: /media
            - name: transcode
              mountPath: /transcode
            - name: dri
              mountPath: /dev/dri
          ports:
            - name: http
              containerPort: 8409

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    gethomepage.dev/href: https://tv.durbin.casa
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: ersatztv
    gethomepage.dev/group: Media
    gethomepage.dev/icon: ersatztv
    gethomepage.dev/name: Ersatztv
spec:
  ingressClassName: internal
  rules:
    - host: &host tv.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
